--- a/analysis/real_data_coloc.Rmd
+++ b/analysis/real_data_coloc.Rmd
@@ -173,7 +173,8 @@ num_single_ctwas_genes <- dim(ctwas_genes)[1]
 num_coloc_genes <- dim(finemap_res[finemap_res$PP4>0.8,])[1]
 
 
-hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "")
+hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "coloc",ylim = c(0,50),xlim = c(1,7),breaks = 8)
+hist(as.vector(table(finemap_res[finemap_res$susie_pip>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "multi-ctwas", add=TRUE, col='red', breaks = 2)
 ```
 
 ### WBC
@@ -244,7 +245,8 @@ num_single_ctwas_genes <- dim(ctwas_genes)[1]
 num_coloc_genes <- dim(finemap_res[finemap_res$PP4>0.8,])[1]
 
 
-hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "")
+hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "coloc",ylim = c(0,100), xlim = c(1,30), breaks = 20)
+hist(as.vector(table(finemap_res[finemap_res$susie_pip>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "multi-ctwas",add=TRUE,col='red',breaks = 2)
 ```
 
 ### SBP
@@ -316,7 +318,8 @@ num_single_ctwas_genes <- dim(ctwas_genes)[1]
 num_coloc_genes <- dim(finemap_res[finemap_res$PP4>0.8,])[1]
 
 
-hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "")
+hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "coloc",ylim = c(0,20),xlim = c(1,30),breaks = 15)
+hist(as.vector(table(finemap_res[finemap_res$susie_pip>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "multi-ctwas",add=TRUE, col='red',breaks = 2)
 ```
 
 ### SCZ
@@ -384,8 +387,8 @@ num_multi_ctwas_genes <- dim(finemap_res[finemap_res$susie_pip>0.8 & finemap_res
 num_single_ctwas_genes <- dim(ctwas_genes)[1]
 num_coloc_genes <- dim(finemap_res[finemap_res$PP4>0.8,])[1]
 
-
-hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "")
+hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "coloc",ylim = c(0,15),xlim = c(0,5),breaks = 2)
+hist(as.vector(table(finemap_res[finemap_res$susie_pip>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "multi-ctwas",add=TRUE,col='red',breaks = 1)
 ```
 
 ### IBD
@@ -453,6 +456,7 @@ num_multi_ctwas_genes <- dim(finemap_res[finemap_res$susie_pip>0.8 & finemap_res
 num_single_ctwas_genes <- dim(ctwas_genes)[1]
 num_coloc_genes <- dim(finemap_res[finemap_res$PP4>0.8,])[1]
 
-hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "")
+hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "coloc",ylim = c(0,15),xlim = c(0,5),breaks = 2)
+hist(as.vector(table(finemap_res[finemap_res$susie_pip>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "multi-ctwas",add=TRUE,col='red',breaks = 2)
 ```
 
