--- a/analysis/multi_group_downstream_analysis.Rmd
+++ b/analysis/multi_group_downstream_analysis.Rmd
@@ -20,6 +20,10 @@ library(VennDiagram)
 source("/project/xinhe/xsun/multi_group_ctwas/data/selected_tissues.R")
 source("/project/xinhe/xsun/multi_group_ctwas/data/samplesize.R")
 
+mapping_predictdb <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
+mapping_munro <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/Munro_mapping.RDS")
+mapping_two <- rbind(mapping_predictdb,mapping_munro)
+
 traits <- names(tissues_alltraits)
 traits <- traits[order(traits)]
 
@@ -353,6 +357,89 @@ LDL:
 
 
 # Reduce FP findings
+
+## Silver standard for T2D LDL BMI RBC 
+
+```{r fig.height=10, fig.width=10, message=FALSE, warning=FALSE}
+
+traits_used_in_silver <- c("T2D-panukb","LDL-ukb-d-30780_irnt","BMI-panukb","RBC-panukb")
+traits_silver <- c("T2D","LDL","BMI","RBC")
+top_tissues <- c("Pituitary","Liver","Cells_Cultured_fibroblasts","Skin_Not_Sun_Exposed_Suprapubic")
+names(top_tissues) <- c("T2D-panukb","LDL-ukb-d-30780_irnt","BMI-panukb","RBC-panukb")
+
+folder_single_results <- "/project/xinhe/shengqian/single_tissue_screen/processed_weights/expression_weights/"
+folder_multi_results <- "/project/xinhe/shengqian/ctwas_GWAS_analysis/results/"
+
+stats_all <- c()
+stats_all_twas <- c()
+for (i in 1:length(traits_used_in_silver)){
+  
+
+  known <- readRDS(paste0("/project/xinhe/xsun/multi_group_ctwas/data/silverstandard/known_annotations_",traits_silver[i],".RDS"))
+  bystander <- readRDS(paste0("/project/xinhe/xsun/multi_group_ctwas/data/silverstandard/bystanders_",traits_silver[i],".RDS"))
+  
+  # single group results
+  
+  tissue <- top_tissues[traits_used_in_silver[i]]
+  
+  z_gene_single <-readRDS(paste0(folder_single_results,"/",traits_used_in_silver[i],"/",traits_used_in_silver[i],"_",tissue,".z_gene.RDS"))
+  z_gene_single <- z_gene_single %>%
+                  mutate(molecular_id = sub("\\|.*", "", id)) %>%  # Extract ENSG ID from id
+                  left_join(mapping_two %>% dplyr::select(molecular_id, gene_name), by = "molecular_id")
+  z_gene_single$p <- z2p(z_gene_single$z)
+  z_gene_single$fdr <- p.adjust(z_gene_single$p, method = "bonferroni")
+  z_gene_single_sig <- z_gene_single[z_gene_single$fdr < 0.05,]
+  
+  
+  combined_pip_single <-readRDS(paste0(folder_single_results,"/",traits_used_in_silver[i],"/",traits_used_in_silver[i],"_",tissue,".combined_pip_bygroup_final.RDS"))
+  combined_pip_sig_single <- combined_pip_single[combined_pip_single$combined_pip > 0.8,]
+  
+  
+  stats_single <- c(traits_used_in_silver[i],"single-group-ctwaspip0.8",nrow(combined_pip_sig_single),length(known), sum(unique(z_gene_single$gene_name) %in% known),sum(combined_pip_sig_single$gene_name %in% known),length(bystander),sum(unique(z_gene_single$gene_name) %in% bystander) ,sum(combined_pip_sig_single$gene_name %in% bystander))
+  stats_single_twas <- c(traits_used_in_silver[i],"single-group-twasbonf0.05",nrow(z_gene_single_sig),length(known),sum(z_gene_single_sig$gene_name %in% known),length(bystander),sum(z_gene_single_sig$gene_name %in% bystander))
+  
+  # multi 
+  
+  z_gene_multi <- readRDS(paste0(folder_multi_results,"/",traits_used_in_silver[i],"/",traits_used_in_silver[i],".z_gene.RDS"))
+  z_gene_multi <- z_gene_multi %>%
+                  mutate(molecular_id = sub("\\|.*", "", id)) %>%  # Extract ENSG ID from id
+                  left_join(mapping_two %>% dplyr::select(molecular_id, gene_name), by = "molecular_id")
+  z_gene_multi$p <- z2p(z_gene_multi$z)
+  z_gene_multi$fdr <- p.adjust(z_gene_multi$p, method = "bonferroni")
+  z_gene_multi_sig <- z_gene_multi[z_gene_multi$fdr < 0.05,]
+  
+  combined_pip_multi <-readRDS(paste0(folder_multi_results,"/",traits_used_in_silver[i],"/",traits_used_in_silver[i],".combined_pip_bygroup_final.RDS"))
+  combined_pip_sig_multi <- combined_pip_multi[combined_pip_multi$combined_pip > 0.8,]
+  
+  stats_multi <- c(traits_used_in_silver[i],"multi-group-ctwaspip0.8",nrow(combined_pip_sig_multi),length(known), sum(unique(z_gene_multi$gene_name) %in% known),sum(combined_pip_sig_multi$gene_name %in% known),length(bystander),sum(unique(z_gene_multi$gene_name) %in% bystander) ,sum(combined_pip_sig_multi$gene_name %in% bystander))
+  #stats_multi_twas <- c(traits_used_in_silver[i],"multi-group-twasbonf0.05",nrow(z_gene_multi_sig),length(known),sum(z_gene_multi_sig$gene_name %in% known),length(bystander),sum(z_gene_multi_sig$gene_name %in% bystander))
+  stats_multi_twas <- c(traits_used_in_silver[i],"multi-group-twasbonf0.05",length(unique(z_gene_multi_sig$gene_name)),length(known),sum(unique(z_gene_multi_sig$gene_name) %in% known),length(bystander),sum(unique(z_gene_multi_sig$gene_name) %in% bystander))
+  
+  stats_trait <- rbind(stats_single, stats_multi)
+  stats_trait_twas <- rbind(stats_single_twas, stats_multi_twas)
+  
+  stats_all <- rbind(stats_all,stats_trait)
+  stats_all_twas <- rbind(stats_all_twas,stats_trait_twas)
+  
+}
+
+colnames(stats_all) <- c("trait","analysis","num_gene_pip08","num_gene_known","num_gene_known_imputable","num_gene_known_pip08","num_gene_bystander","num_gene_bystander_imputable","num_gene_bystander_pip08")
+rownames(stats_all) <- seq(1:nrow(stats_all))
+stats_all <- as.data.frame(stats_all)
+
+stats_all$TP_rate <- as.numeric(stats_all$num_gene_known_pip08) / (as.numeric(stats_all$num_gene_known_pip08) + as.numeric(stats_all$num_gene_bystander_pip08))
+
+DT::datatable(stats_all,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing cTWAS results with silver standard genes'),options = list(pageLength = 10) )
+
+colnames(stats_all_twas) <- c("trait","analysis","num_gene_bonf0.05","num_gene_known","num_gene_known_bonf0.05","num_gene_bystander","num_gene_bystander_bonf0.05")
+rownames(stats_all_twas) <- seq(1:nrow(stats_all_twas))
+stats_all_twas <- as.data.frame(stats_all_twas)
+
+stats_all_twas$TP_rate <- as.numeric(stats_all_twas$num_gene_known_bonf0.05) / (as.numeric(stats_all_twas$num_gene_known_bonf0.05) + as.numeric(stats_all_twas$num_gene_bystander_bonf0.05))
+
+DT::datatable(stats_all_twas,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing TWAS results with silver standard genes'),options = list(pageLength = 10) )
+```
+
 
 ## Silver standard for LDL
 
