--- a/analysis/multi_group_downstream_analysis.Rmd
+++ b/analysis/multi_group_downstream_analysis.Rmd
@@ -734,35 +734,34 @@ top_tissues <- c("Pituitary","Liver","Cells_Cultured_fibroblasts","Skin_Not_Sun_
 names(top_tissues) <- c("T2D-panukb","LDL-ukb-d-30780_irnt","BMI-panukb","RBC-panukb")
 
 #folder_single_results <- "/project/xinhe/shengqian/single_tissue_screen/processed_weights/expression_weights/"
-folder_multi_results <- "/project/xinhe/shengqian/ctwas_GWAS_analysis/results/"
+folder_multi_results <- "/project/xinhe/shengqian/ctwas_GWAS_analysis/results_same_variance/"
 
 stats_all <- c()
 stats_all_twas <- c()
 for (i in 1:length(traits_used_in_silver)){
-
 
   known <- readRDS(paste0("/project/xinhe/xsun/multi_group_ctwas/data/silverstandard/known_annotations_",traits_silver[i],".RDS"))
   bystander <- readRDS(paste0("/project/xinhe/xsun/multi_group_ctwas/data/silverstandard/bystanders_",traits_silver[i],".RDS"))
 
   # single group results
 
-  tissue <- top_tissues[traits_used_in_silver[i]]
-
-  z_gene_single <-readRDS(paste0(folder_single_results,"/",traits_used_in_silver[i],"/",traits_used_in_silver[i],"_",tissue,".z_gene.RDS"))
-  z_gene_single <- z_gene_single %>%
-                  mutate(molecular_id = sub("\\|.*", "", id)) %>%  # Extract ENSG ID from id
-                  left_join(mapping_two %>% dplyr::select(molecular_id, gene_name), by = "molecular_id")
-  z_gene_single$p <- z2p(z_gene_single$z)
-  z_gene_single$fdr <- p.adjust(z_gene_single$p, method = "bonferroni")
-  z_gene_single_sig <- z_gene_single[z_gene_single$fdr < 0.05,]
-
-
-  combined_pip_single <-readRDS(paste0(folder_single_results,"/",traits_used_in_silver[i],"/",traits_used_in_silver[i],"_",tissue,".combined_pip_bygroup_final.RDS"))
-  combined_pip_sig_single <- combined_pip_single[combined_pip_single$combined_pip > 0.8,]
-
-
-  stats_single <- c(traits_used_in_silver[i],"single-group-ctwaspip0.8",nrow(combined_pip_sig_single),length(known), sum(unique(z_gene_single$gene_name) %in% known),sum(combined_pip_sig_single$gene_name %in% known),length(bystander),sum(unique(z_gene_single$gene_name) %in% bystander) ,sum(combined_pip_sig_single$gene_name %in% bystander))
-  stats_single_twas <- c(traits_used_in_silver[i],"single-group-twasbonf0.05",nrow(z_gene_single_sig),length(known),sum(z_gene_single_sig$gene_name %in% known),length(bystander),sum(z_gene_single_sig$gene_name %in% bystander))
+  # tissue <- top_tissues[traits_used_in_silver[i]]
+  # 
+  # z_gene_single <-readRDS(paste0(folder_single_results,"/",traits_used_in_silver[i],"/",traits_used_in_silver[i],"_",tissue,".z_gene.RDS"))
+  # z_gene_single <- z_gene_single %>%
+  #                 mutate(molecular_id = sub("\\|.*", "", id)) %>%  # Extract ENSG ID from id
+  #                 left_join(mapping_two %>% dplyr::select(molecular_id, gene_name), by = "molecular_id")
+  # z_gene_single$p <- z2p(z_gene_single$z)
+  # z_gene_single$fdr <- p.adjust(z_gene_single$p, method = "bonferroni")
+  # z_gene_single_sig <- z_gene_single[z_gene_single$fdr < 0.05,]
+  # 
+  # 
+  # combined_pip_single <-readRDS(paste0(folder_single_results,"/",traits_used_in_silver[i],"/",traits_used_in_silver[i],"_",tissue,".combined_pip_bygroup_final.RDS"))
+  # combined_pip_sig_single <- combined_pip_single[combined_pip_single$combined_pip > 0.8,]
+  # 
+  # 
+  # stats_single <- c(traits_used_in_silver[i],"single-group-ctwaspip0.8",nrow(combined_pip_sig_single),length(known), sum(unique(z_gene_single$gene_name) %in% known),sum(combined_pip_sig_single$gene_name %in% known),length(bystander),sum(unique(z_gene_single$gene_name) %in% bystander) ,sum(combined_pip_sig_single$gene_name %in% bystander))
+  # stats_single_twas <- c(traits_used_in_silver[i],"single-group-twasbonf0.05",nrow(z_gene_single_sig),length(known),sum(z_gene_single_sig$gene_name %in% known),length(bystander),sum(z_gene_single_sig$gene_name %in% bystander))
 
   # multi
 
@@ -781,8 +780,10 @@ for (i in 1:length(traits_used_in_silver)){
   #stats_multi_twas <- c(traits_used_in_silver[i],"multi-group-twasbonf0.05",nrow(z_gene_multi_sig),length(known),sum(z_gene_multi_sig$gene_name %in% known),length(bystander),sum(z_gene_multi_sig$gene_name %in% bystander))
   stats_multi_twas <- c(traits_used_in_silver[i],"multi-group-twasbonf0.05",length(unique(z_gene_multi_sig$gene_name)),length(known),sum(unique(z_gene_multi_sig$gene_name) %in% known),length(bystander),sum(unique(z_gene_multi_sig$gene_name) %in% bystander))
 
-  stats_trait <- rbind(stats_single, stats_multi)
-  stats_trait_twas <- rbind(stats_single_twas, stats_multi_twas)
+  #stats_trait <- rbind(stats_single, stats_multi)
+  stats_trait <- stats_multi
+  stats_trait_twas <- stats_multi_twas
+  #stats_trait_twas <- rbind(stats_single_twas, stats_multi_twas)
 
   stats_all <- rbind(stats_all,stats_trait)
   stats_all_twas <- rbind(stats_all_twas,stats_trait_twas)
@@ -805,3 +806,6 @@ stats_all_twas$TP_rate <- as.numeric(stats_all_twas$num_gene_known_bonf0.05) / (
 
 DT::datatable(stats_all_twas,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing TWAS results with silver standard genes'),options = list(pageLength = 10) )
 ```
+
+
+
